kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-test-app
  template:
    metadata:
      labels:
        app: k8s-test-app
    spec:
      containers:
        - name: k8s-test-app
          image: ghcr.io/rodmhgl/k8s-test-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          volumeMounts:
            - name: test-data
              mountPath: /data
      volumes:
        - name: test-data
          persistentVolumeClaim:
            claimName: k8s-test-app-pvc
